2013-04-04  Andreas K. Foerster  <info@akfoerster.de>

	* avtmenu.c: animated forward/backward scrolling

2013-04-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-linuxfb.c (update_area_32bit, update_area_24bit)
	(update_area_16bit): new functions replace update_area_fb

------------------------------------------------------------------------

2013-03-27  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.23.1 released

2013-03-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char, avt_say, avt_say_len):
	move interpretation of UTF-16 surrogates to a lower level

2013-03-23  Andreas K. Foerster  <info@akfoerster.de>

	* colorchooser.c (show_color): fix that works for MinGW

2013-03-21  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, version.c (avt_wide_version): new function

2013-03-20  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_wide_copyright, avt_wide_license):
	new functions

	* avatar.c (avt_input): fix display bug

2013-03-19  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c, colorchooser.c:
	use locale dependend multibyte functions instead of iconv

2013-03-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_quit_encoding_function): new function
	avatar.c (avt_quit), avtencoding.c: adapted

	* avatar-sdl.c (avt_set_title): don't even try to recode

	* example.c: only use wide characters

2013-03-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtgraphic.h, avtgraphic.c: new files
	avatar.c: adapted

2013-03-15  Andreas K. Foerster  <info@akfoerster.de>

	* avtxbm.c, avtxpm.c, avtbmp.c: new files
	avatar.c: adapted

2013-03-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (screen): screen is a separate static variable again

	* avtencoding.c: new file
	avatar.c: adapted

2013-02-26  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, filechooser.c (avta_file_selection, avta_filter):
	new option data
